yaml/storage/longhorn/08-manager-ds.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9500"
    spec:
      containers:
      - name: longhorn-manager
        image: longhornio/longhorn-manager:v1.2.0
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        command:
        - longhorn-manager
        - -d
        - daemon
        - --engine-image
        - longhornio/longhorn-engine:v1.2.0
        - --instance-manager-image
        - longhornio/longhorn-instance-manager:v1_20210731
        - --share-manager-image
        - longhornio/longhorn-share-manager:v1_20210820
        - --backing-image-manager-image
        - longhornio/backing-image-manager:v2_20210820
        - --manager-image
        - longhornio/longhorn-manager:v1.2.0
        - --service-account
        - longhorn-sa
        ports:
        - containerPort: 9500
          name: manager
        readinessProbe:
          tcpSocket:
            port: 9500
        volumeMounts:
        - name: dev
          mountPath: /host/dev/
        - name: proc
          mountPath: /host/proc/
        - name: longhorn
          mountPath: /var/lib/longhorn/
          mountPropagation: Bidirectional
        - name: longhorn-default-setting
          mountPath: /var/lib/longhorn-setting/
      volumes:
      - name: dev
        hostPath:
          path: /dev/
      - name: proc
        hostPath:
          path: /proc/
      - name: longhorn
        hostPath:
          path: /var/lib/longhorn/
      - name: longhorn-default-setting
        configMap:
          name: longhorn-default-setting
      serviceAccountName: longhorn-sa
  updateStrategy:
    rollingUpdate:
      maxUnavailable: "100%"
