yaml/storage/longhorn/07-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-frontend
  namespace: longhorn-system
spec:
#  type: LoadBalancer
#  loadBalancerIP: 10.1.0.13
  type: ClusterIP
  selector:
    app: longhorn-ui
  ports:
  - name: http
    port: 8000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-manager
  name: longhorn-backend
  namespace: longhorn-system
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: longhorn-manager
  ports:
  - name: manager
    port: 9500
    targetPort: manager
